<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/txtvtitulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="22dp"
        android:hint="@string/title3"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="50px"
        app:layout_constraintBottom_toTopOf="@+id/txtnumero1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtnumero1"
        android:layout_width="97dp"
        android:layout_height="39dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/numero1"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/txtnumero2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvtitulo3" />

    <EditText
        android:id="@+id/txtnumero2"
        android:layout_width="96dp"
        android:layout_height="46dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/numero2"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnSumar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnumero1" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/sumar"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtnumero2" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="6dp"
        android:hint="@string/restar"
        app:layout_constraintBottom_toTopOf="@+id/btnDividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSumar"
        app:layout_constraintTop_toBottomOf="@+id/txtnumero2" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/multiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btnDividir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSumar" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="84dp"
        android:hint="@string/dividir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/btnRestar" />

    <TextView
        android:id="@+id/txtvResultadoOperacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="64dp"
        android:hint="@string/txtvResultadoOperacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDividir" />

</androidx.constraintlayout.widget.ConstraintLayout>